chore: replace content in `vi` with `en` content default

--- a/content/vi/1.getting-started/3.installation.md
+++ b/content/vi/1.getting-started/3.installation.md
@@ -1,54 +1,53 @@
 ---
 title: Installation
-description: Commencez avec Docus.
+description: Get started with Docus.
 navigation:
   icon: i-lucide-download
 seo:
-  description: Démarrez avec le thème de documentation Docus.
+  description: Get started with Docus documentation theme.
 ---
 
-## CLI `create-docus`
+## `create-docus` CLI
 
 ::steps
-### Créez votre dossier de documentation
+### Create your docs directory
 
-Utilisez le CLI `create-docus` pour créer un nouveau projet Docus :
+Use the `create-docus` CLI to create a new Docus project:
 
 ```bash [Terminal]
 npx create-docus my-docs
 ```
 
-Vous pouvez choisir entre deux templates:
-
-- `default` : Configuration Docus de base pour une documentation monolingue
-- `i18n` : Inclut le support d'internationalisation pour une documentation multilingue
+You can choose between two templates:
+- **`default`**: Basic Docus setup for single-language documentation
+- **`i18n`**: Includes internationalization support for multi-language documentation
 
 ```bash [Terminal]
-# Créer avec le modèle i18n
+# Create with i18n template
 npx create-docus my-docs -t i18n
 ```
 
-Nous recommandons d'utiliser le gestionnaire de paquets `npm`.
+We recommend using the `npm` package manager.
 
-### Démarrez votre serveur de documentation en mode développement
+### Start your docs server in development
 
-Déplacez-vous dans votre dossier de documentation et démarrez votre serveur:
+Move to your docs directory and start your docs server in development mode:
 
 ```bash [Terminal]
 cd my-docs
 npm run dev
 ```
 
-Un aperçu de votre documentation sera disponible sur <http://localhost:3000>
+A local preview of your documentation will be available at <http://localhost:3000>
 
-### Rédigez votre documentation
+### Write your documentation
 
-Rendez-vous dans la section [Édition](/fr/concepts/edition) pour apprendre à rédiger votre documentation.
+Head over the [Edition](/en/concepts/edition) section to learn how to write your documentation.
 ::
 
-## Intégration du layer Docus
+## Layer Integration
 
-Docus v4 utilise une **approche basée sur les layers Nuxt**, vous pouvez étendre le layer Docus directement dans votre `nuxt.config.ts` avec `extends: ['docus']` :
+Docus v4 uses a **Nuxt layer-based approach**, you can extend the Docus layer directly in your `nuxt.config.ts` with `extends: ['docus']`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -56,27 +55,27 @@ export default defineNuxtConfig({
 })
 ```
 
-## Édition en ligne avec Nuxt Studio
+## Online Edition with Nuxt Studio
 
 ::prose-steps
-### Créez un nouveau projet sur Nuxt Studio
+### Create a new project on Nuxt Studio
 
-Depuis votre tableau de bord utilisateur ou équipe, cliquez sur le bouton `New project` puis choisissez `Start from a template` et sélectionnez **Docus.** Clonez-le sur votre compte GitHub personnel ou dans une organisation de votre choix.
+From your user or team dashboard, click the `New project` button then choose `Start from a template` and select **Docus.** Clone it on your GitHub personal account or any organisation of your choice.
 
-### Déployez en un clic
+### Deploy in one click
 
-Une fois votre projet créé et dans le tableau de bord du projet, rendez-vous dans la section `Deploy`, choisissez l'onglet `GitHub Pages` puis cliquez sur le bouton **Deploy**.
+Once your project has been created and you're in the project dashboard, navigate to the `Deploy` section, choose the `GitHub Pages` tab then click on the **Deploy** button.
 
   :::prose-note
   ---
   to: https://content.nuxt.com/docs/studio/setup#enable-the-full-editing-experience
   ---
-  Il s'agit d'un déploiement statique en un clic disponible avec [GitHub Pages](https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site) mais vous pouvez aussi gérer le déploiement vous-même et utiliser l'onglet `Selfhosted`.
+  This is a one click static deployment available with [GitHub Pages](https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site) but you can also handle deployment yourself and use the `Selfhosted` tab.
   :::
 
-### Rédigez votre documentation dans l'éditeur
+### Write your documentation in the editor
 
-Une fois le déploiement terminé, vous pourrez afficher l'aperçu de votre documentation. Vous pouvez parcourir vos pages de contenu pour les éditer ou en créer de nouvelles.
+Once the deployment is achieved, you'll be able to display the preview of your documentation. You can browse your content pages to edit them or create new ones.
 
 :video{controls loop poster="https://res.cloudinary.com/nuxt/video/upload/v1747230893/studio/wzt9zfmdvk7hgmdx3cnt.jpg" src="https://res.cloudinary.com/nuxt/video/upload/v1747230893/studio/wzt9zfmdvk7hgmdx3cnt.mp4"}
 ::
