--- a/content/vi/2.essentials/2.code-blocks.md
+++ b/content/vi/2.essentials/2.code-blocks.md
@@ -1,31 +1,31 @@
 ---
-title: Blocs de code
-description: Affichez du code en ligne et des blocs de code dans votre documentation.
+title: Code Blocks
+description: Display inline code and code blocks in your documentation.
 navigation:
   icon: i-lucide-code-xml
 ---
 
-## Basique
+## Basic
 
-### Code en ligne
+### Inline Code
 
-Utilisez le code en ligne pour afficher des extraits de code dans les paragraphes. Idéal pour référencer des éléments de code directement dans les phrases.
+Use inline code to display code snippets within text paragraphs. It's ideal for referencing code elements directly in sentences.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0"
 ---
-`code en ligne`
+`inline code`
 
 #code
 ```mdc
-`code en ligne`
+`inline code`
 ```
 ::
 
-### Blocs de code
+### Code Blocks
 
-Utilisez les blocs de code pour afficher des extraits de code multi-lignes avec coloration syntaxique. Les blocs de code sont essentiels pour présenter clairement des exemples de code.
+Use code blocks to display multi-line code snippets with syntax highlighting. Code blocks are essential for presenting code examples clearly.
 
 ::code-preview
 ---
@@ -47,8 +47,8 @@ export default defineNuxtConfig({
 ````
 ::
 
-Lorsque vous écrivez un bloc de code, vous pouvez spécifier un nom de fichier qui sera affiché au-dessus du bloc. Une icône sera automatiquement affichée selon l'extension ou le nom.
-Les noms de fichiers aident les utilisateurs à comprendre l'emplacement et le but du code dans un projet.
+When writing a code-block, you can specify a filename that will be displayed on top of the code block. An icon will be automatically displayed based on the extension or the name.
+Filenames help users understand the code's location and purpose within a project.
 
 ::code-preview
 ---
@@ -70,10 +70,10 @@ export default defineNuxtConfig({
 ````
 ::
 
-Chaque bloc de code possède un bouton de copie intégré qui permet de copier le code dans le presse-papiers.
+Every code-block has a built-in copy button that will copy the code to your clipboard.
 
 ::tip{to="https://ui.nuxt.com/getting-started/icons/nuxt#theme"}
-Les icônes sont déjà définies par défaut, mais vous pouvez les personnaliser dans votre `app.config.ts` :
+Icons are already defined by default, but you can customize them in your `app.config.ts`:
 
 ```ts [app.config.ts]
 export default defineAppConfig({
@@ -88,11 +88,11 @@ export default defineAppConfig({
 ```
 ::
 
-## Avancé
+## Advanced
 
 ### CodeGroup
 
-Groupez des blocs de code dans des onglets avec `code-group`. `code-group` est parfait pour montrer des exemples de code dans plusieurs langages ou gestionnaires de paquets.
+Group code blocks in tabs using `code-group`. `code-group` is perfect for showing code examples in multiple languages or package managers.
 
 ::code-preview
 ---
@@ -142,7 +142,7 @@ bun add @nuxt/ui
 
 ### CodeTree
 
-Affichez des blocs de code dans une vue arborescente avec `code-tree`. `code-tree` est excellent pour présenter des structures de projet et des relations de fichiers.
+Display code blocks in a file tree view using `code-tree`. `code-tree` is excellent for showcasing project structures and file relationships.
 
 ::code-preview{class="[&>div]:*:my-0 [&>div]:*:w-full"}
   :::code-tree{default-value="app/app.config.ts"}
@@ -215,11 +215,11 @@ Affichez des blocs de code dans une vue arborescente avec `code-tree`. `code-tre
   ````md [README.md]
   # Nuxt 4 Minimal Starter
   
-  Consultez la [documentation Nuxt 4](https://nuxt.com/docs/getting-started/introduction) pour en savoir plus.
+  Look at the [Nuxt 4 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.
   
-  ## Installation
+  ## Setup
   
-  Assurez-vous d'installer les dépendances :
+  Make sure to install the dependencies:
   
   ```bash
   # npm
@@ -235,9 +235,9 @@ Affichez des blocs de code dans une vue arborescente avec `code-tree`. `code-tre
   bun install
   ```
   
-  ## Serveur de développement
+  ## Development Server
   
-  Démarrez le serveur de développement sur `http://localhost:3000` :
+  Start the development server on `http://localhost:3000`:
   
   ```bash
   # npm
@@ -255,7 +255,7 @@ Affichez des blocs de code dans une vue arborescente avec `code-tree`. `code-tre
   
   ## Production
   
-  Construisez l'application pour la production :
+  Build the application for production:
   
   ```bash
   # npm
@@ -271,7 +271,7 @@ Affichez des blocs de code dans une vue arborescente avec `code-tree`. `code-tre
   bun run build
   ```
   
-  Prévisualisez localement la build de production :
+  Locally preview production build:
   
   ```bash
   # npm
@@ -287,41 +287,41 @@ Affichez des blocs de code dans une vue arborescente avec `code-tree`. `code-tre
   bun run preview
   ```
   
-  Consultez la [documentation de déploiement](https://nuxt.com/docs/getting-started/deployment) pour plus d'informations.
-  ```
+  Check out the [deployment documentation](https://nuxt.com/docs/getting-started/deployment) for more information.
+  ````
   :::
 ::
 
 ### `CodePreview`
 
-Utilisez `code-preview` pour afficher le résultat du code à côté du code. `code-preview` est idéal pour les exemples interactifs et la démonstration de résultats de code.
-Écrivez le code à prévisualiser dans le slot `default` et le code réel dans le slot `code`.
+Use `code-preview` to show code output alongside the code. `code-preview` is ideal for interactive examples and demonstrating code results.
+Write the code to be previewed in a the `default` slot and the actual code in the `code` slot.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0 [&>div]:*:w-full"
-label: Aperçu
+label: Preview
 ---
   :::code-preview
   ---
   class: "[&>div]:*:my-0"
   ---
-  `code en ligne`
+  `inline code`
   
   #code
   ```mdc
-  `code en ligne`
+  `inline code`
   ```
   :::
 
 #code
 ````mdc
 ::code-preview
-`code en ligne`
+`inline code`
 
 #code
 ```mdc
-`code en ligne`
+`inline code`
 ```
 ::
 ````
@@ -329,7 +329,7 @@ label: Aperçu
 
 ### `CodeCollapse`
 
-Utilisez `code-collapse` pour les longs blocs de code afin de garder les pages propres. `code-collapse` permet aux utilisateurs de déplier les blocs de code uniquement si besoin, améliorant ainsi la lisibilité.
+Use `code-collapse` for long code blocks to keep pages clean. `code-collapse` allows users to expand code blocks only when needed, improving readability.
 
 ::code-preview
 ---
