--- a/content/vi/2.essentials/3.components.md
+++ b/content/vi/2.essentials/3.components.md
@@ -1,44 +1,45 @@
 ---
-title: Composants Markdown
-description: Utilisez les composants Markdown pour structurer votre contenu, avec l'aide de Nuxt UI.
+title: Markdown Components
+description: Use Markdown components to help you structure your content, with
+  the help of Nuxt UI.
 navigation:
   icon: i-lucide-component
-  title: Composants
+  title: Components
 ---
 
-Les composants prose sont des remplacements pour les balises de typographie HTML. Ils offrent un moyen simple de personnaliser votre interface lors de l'utilisation de Markdown.
+Prose components are replacements for HTML typography tags. They provide a simple way to customize your UI when using Markdown.
 
-**Docus et Nuxt UI** fournissent un ensemble de composants prose stylés et élégants pour vous aider à rédiger votre documentation avec la [syntaxe MDC](https://content.nuxt.com/docs/files/markdown#mdc-syntax).
+**Docus and Nuxt UI** provides a set of styled and beautiful prose components to help you write your documentation using the [MDC syntax](https://content.nuxt.com/docs/files/markdown#mdc-syntax).
 
 ::prose-note{to="https://ui.nuxt.com/getting-started"}
-Cette page met en avant uniquement les composants prose les plus adaptés à la rédaction de documentation. Cependant, vous pouvez utiliser **n'importe quel composant Nuxt UI** dans votre Markdown. Pour la liste complète des composants disponibles, consultez la documentation Nuxt UI.
+This page highlights only the prose components best suited for writing documentation. However, you can use **any Nuxt UI or Nuxt UI component** in your Markdown. For the full list of available components, visit the Nuxt UI documentation.
 ::
 
 ### `Accordion`
 
-Utilisez les composants `accordion` et `accordion-item` pour afficher un [Accordion](https://ui.nuxt.com/components/accordion) dans votre contenu.
+Use the `accordion` and `accordion-item` components to display an [Accordion](https://ui.nuxt.com/components/accordion) in your content.
 
 ::tabs
-  :::tabs-item{icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{icon="i-lucide-eye" label="Preview"}
     ::::accordion
       :::::accordion-item
       ---
       icon: i-lucide-circle-help
-      label: Qu'est-ce que Docus et quelles sont ses fonctionnalités clés ?
+      label: What is Docus and what are its key features??
       ---
-      Docus est une solution de documentation entièrement intégrée construite avec Nuxt UI. C'est un thème inspiré du template de documentation Nuxt UI qui fournit un visuel prêt à l'emploi. L'utilisateur peut se concentrer sur le contenu en utilisant Markdown et la syntaxe MDC.
+      Docus is a fully integrated documentation solution built with Nuxt UI. It's a theme based on the UI documentation template that provides a ready-to-use visual. User can focus on content using Markdown and MDC syntax.
       :::::
     
       :::::accordion-item
       ---
       icon: i-lucide-circle-help
-      label: Comment démarrer avec Docus ?
+      label: How do I get started with Docus?
       ---
-      La seule chose dont vous avez besoin pour démarrer un projet Docus est un dossier `content/`. Consultez le starter pour un démarrage rapide.
+      The only thing you need to start a Docus project is a `content/` folder. You can have a check at the starter for a quick start.
       :::::
     
-      :::::accordion-item{icon="i-lucide-circle-help" label="Qu'est-ce que Nuxt UI ?"}
-      Nuxt UI est une collection de composants Vue premium, de composables et d'utilitaires construits sur [Nuxt UI](https://ui.nuxt.com/). Nuxt UI est gratuit en développement, mais nécessite une licence pour la production.
+      :::::accordion-item{icon="i-lucide-circle-help" label="What is Nuxt UI?"}
+      [Nuxt UI](https://ui.nuxt.com/) is a collection of premium Vue components, composables and utils.
       :::::
     ::::
   :::
@@ -47,16 +48,16 @@ Utilisez les composants `accordion` et `accordion-item` pour afficher un [Accord
   ```mdc
   ::accordion
   
-    :::accordion-item{label="Qu'est-ce que Docus et quelles sont ses fonctionnalités clés ?" icon="i-lucide-circle-help"}
-    Docus est une solution de documentation entièrement intégrée construite avec Nuxt UI. C'est un thème inspiré du template de documentation Nuxt UI qui fournit un visuel prêt à l'emploi. L'utilisateur peut se concentrer sur le contenu en utilisant Markdown et la syntaxe MDC.
+    :::accordion-item{label="What is Docus and what are its key features??" icon="i-lucide-circle-help"}
+    Docus is a fully integrated documentation solution built with Nuxt UI. It's a theme based on the UI documentation template that provides a ready-to-use visual. User can focus on content using Markdown and MDC syntax.
     :::
   
-    :::accordion-item{label="Comment démarrer avec Docus ?" icon="i-lucide-circle-help"}
-    La seule chose dont vous avez besoin pour démarrer un projet Docus est un dossier `content/`. Consultez le starter pour un démarrage rapide.
+    :::accordion-item{label="How do I get started with Docus?" icon="i-lucide-circle-help"}
+    The only thing you need to start a Docus project is a `content/` folder. You can have a check at the starter for a quick start.
     :::
   
-    :::accordion-item{label="Qu'est-ce que Nuxt UI ?" icon="i-lucide-circle-help"}
-    Nuxt UI est une collection de composants Vue premium, de composables et d'utilitaires.
+    :::accordion-item{label="What is Nuxt UI?" icon="i-lucide-circle-help"}
+    [Nuxt UI](https://ui.nuxt.com/) is a collection of premium Vue components, composables and utils.
     :::
   ::
   ```
@@ -65,10 +66,10 @@ Utilisez les composants `accordion` et `accordion-item` pour afficher un [Accord
 
 ### `Badge`
 
-Utilisez du markdown dans le slot par défaut du composant `badge` pour afficher un [Badge](https://ui.nuxt.com/components/badge) dans votre contenu.
+Use markdown in the default slot of the `badge` component to display a [Badge](https://ui.nuxt.com/components/badge) in your content.
 
 ::tabs
-  :::tabs-item{.my-5 icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{.my-5 icon="i-lucide-eye" label="Preview"}
     ::::badge
     **v3.0.0**
     ::::
@@ -85,29 +86,29 @@ Utilisez du markdown dans le slot par défaut du composant `badge` pour afficher
 
 ### `Callout`
 
-Utilisez du markdown dans le slot par défaut du composant `callout` pour ajouter un contexte visuel à votre contenu.
+Use markdown in the default slot of the `callout` component to add eye-catching context to your content.
 
-Utilisez les props `icon` et `color` pour le personnaliser. Vous pouvez aussi passer n'importe quelle propriété du composant [`<NuxtLink>`](https://nuxt.com/docs/api/components/nuxt-link).
+Use the `icon` and `color` props to customize it. You can also pass any property from the [`<NuxtLink>`](https://nuxt.com/docs/api/components/nuxt-link) component.
 
-Vous pouvez également utiliser les raccourcis `note`, `tip`, `warning` et `caution` avec des icônes et couleurs prédéfinies.
+You can also use the `note`, `tip`, `warning` and `caution` shortcuts with pre-defined icons and colors.
 
 ::tabs
-  :::tabs-item{.my-5 icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{.my-5 icon="i-lucide-eye" label="Preview"}
     ::::div{.flex.flex-col.gap-4.w-full}
       :::::note{.w-full.my-0}
-      Voici des informations supplémentaires pour vous.
+      Here's some additional information for you.
       :::::
     
       :::::tip{.w-full.my-0}
-      Voici une suggestion utile.
+      Here's a helpful suggestion.
       :::::
     
       :::::warning{.w-full.my-0}
-      Faites attention à cette action car elle pourrait avoir des résultats inattendus.
+      Be careful with this action as it might have unexpected results.
       :::::
     
       :::::caution{.w-full.my-0}
-      Cette action est irréversible.
+      This action cannot be undone.
       :::::
     ::::
   :::
@@ -115,43 +116,43 @@ Vous pouvez également utiliser les raccourcis `note`, `tip`, `warning` et `caut
   :::tabs-item{icon="i-lucide-code" label="Code"}
   ```mdc
   ::note
-  Voici des informations supplémentaires.
+  Here's some additional information.
   ::
   
   ::tip
-  Voici une suggestion utile.
+  Here's a helpful suggestion.
   ::
   
   ::warning
-  Faites attention à cette action car elle pourrait avoir des résultats inattendus.
+  Be careful with this action as it might have unexpected results.
   ::
   
   ::caution
-  Cette action est irréversible.
+  This action cannot be undone.
   ::
   ```
   :::
 ::
 
-### `Card` et `CardGroup`
+### `Card` and `CardGroup`
 
-Utilisez du markdown dans le slot par défaut du composant `card` pour mettre en avant votre contenu.
+Use markdown in the default slot of the `card` component to highlight your content.
 
-Utilisez les props `title`, `icon` et `color` pour le personnaliser. Vous pouvez aussi passer n'importe quelle propriété du composant [`<NuxtLink>`](https://nuxt.com/docs/api/components/nuxt-link).
+Use the `title`, `icon` and `color` props to customize it. You can also pass any property from the [`<NuxtLink>`](https://nuxt.com/docs/api/components/nuxt-link).
 
-Regroupez vos composants `card` avec le composant `card-group` pour les afficher en grille.
+Wrap your `card` components with the `card-group` component to group them together in a grid layout.
 
 ::tabs
-  :::tabs-item{.my-5 icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{.my-5 icon="i-lucide-eye" label="Preview"}
     ::::card-group{.w-full.my-0}
       :::::card
       ---
       icon: i-simple-icons-github
       target: _blank
-      title: Tableau de bord
+      title: Dashboard
       to: https://github.com/nuxt-ui-templates/dashboard
       ---
-      Un tableau de bord avec une mise en page multi-colonnes.
+      A dashboard with multi-column layout.
       :::::
     
       :::::card
@@ -161,7 +162,7 @@ Regroupez vos composants `card` avec le composant `card-group` pour les afficher
       title: SaaS
       to: https://github.com/nuxt-ui-templates/saas
       ---
-      Un template avec landing, pricing, docs et blog.
+      A template with landing, pricing, docs and blog.
       :::::
     
       :::::card
@@ -171,7 +172,7 @@ Regroupez vos composants `card` avec le composant `card-group` pour les afficher
       title: Docs
       to: https://github.com/nuxt-ui-templates/docs
       ---
-      Une documentation avec `@nuxt/content`.
+      A documentation with `@nuxt/content`.
       :::::
     
       :::::card
@@ -181,23 +182,23 @@ Regroupez vos composants `card` avec le composant `card-group` pour les afficher
       title: Landing
       to: https://github.com/nuxt-ui-templates/landing
       ---
-      Une page d'accueil à utiliser comme point de départ.
+      A landing page you can use as starting point.
       :::::
     ::::
   :::
 
-  :::tabs-item{.my-5 icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{.my-5 icon="i-lucide-eye" label="Preview"}
   ```mdc
   :::card-group
   
     ::card
     ---
-    title: Tableau de bord
+    title: Dashboard
     icon: i-simple-icons-github
     to: https://github.com/nuxt-ui-templates/dashboard
     target: _blank
     ---
-    Un tableau de bord avec une mise en page multi-colonnes.
+    A dashboard with multi-column layout.
     ::
   
     ::card
@@ -207,7 +208,7 @@ Regroupez vos composants `card` avec le composant `card-group` pour les afficher
     to: https://github.com/nuxt-ui-templates/saas
     target: _blank
     ---
-    Un template avec landing, pricing, docs et blog.
+    A template with landing, pricing, docs and blog.
     ::
   
     ::card
@@ -217,7 +218,7 @@ Regroupez vos composants `card` avec le composant `card-group` pour les afficher
     to: https://github.com/nuxt-ui-templates/docs
     target: _blank
     ---
-    Une documentation avec `@nuxt/content`.
+    A documentation with `@nuxt/content`.
     ::
   
     ::card
@@ -227,7 +228,7 @@ Regroupez vos composants `card` avec le composant `card-group` pour les afficher
     to: https://github.com/nuxt-ui-templates/landing
     target: _blank
     ---
-    Une page d'accueil à utiliser comme point de départ.
+    A landing page you can use as starting point.
     ::
   
   :::
@@ -237,12 +238,12 @@ Regroupez vos composants `card` avec le composant `card-group` pour les afficher
 
 ### `Collapsible`
 
-Enveloppez votre contenu avec le composant `collapsible` pour afficher un [Collapsible](https://ui.nuxt.com/components/collapsible) dans votre contenu.
+Wrap your content with the `collapsible` component to display a [Collapsible](https://ui.nuxt.com/components/collapsible) in your content.
 
 ::tabs
-  :::tabs-item{.my-5 icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{.my-5 icon="i-lucide-eye" label="Preview"}
     ::::collapsible
-    | Prop    | Défaut    | Type     |
+    | Prop    | Default   | Type     |
     | ------- | --------- | -------- |
     | `name`  |           | `string` |
     | `size`  | `md`      | `string` |
@@ -254,7 +255,7 @@ Enveloppez votre contenu avec le composant `collapsible` pour afficher un [Colla
   ```mdc
   ::collapsible
   
-  | Prop    | Défaut    | Type                     |
+  | Prop    | Default   | Type                     |
   |---------|-----------|--------------------------|
   | `name`  |           | `string`{lang="ts-type"} |
   | `size`  | `md`      | `string`{lang="ts-type"} |
@@ -265,27 +266,27 @@ Enveloppez votre contenu avec le composant `collapsible` pour afficher un [Colla
   :::
 ::
 
-### `Field` et `FieldGroup`
+### `Field` and `FieldGroup`
 
-Un `field` est une prop ou un paramètre à afficher dans votre contenu. Vous pouvez les regrouper avec `field-group` dans une liste.
+A `field`is a prop or parameter to display in your content. You can group them by `field-group` in a list.
 
 ::tabs
-  :::tabs-item{.my-5 icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{.my-5 icon="i-lucide-eye" label="Preview"}
     ::::field-group{.my-0}
       :::::field{name="analytics" type="boolean"}
-      Par défaut à `false` - Active l'analytics pour votre projet (bientôt disponible).
+      Default to `false` - Enables analytics for your project (coming soon).
       :::::
     
       :::::field{name="blob" type="boolean"}
-      Par défaut à `false` - Active le stockage blob pour stocker des assets statiques, comme des images, vidéos et plus.
+      Default to `false` - Enables blob storage to store static assets, such as images, videos and more.
       :::::
     
       :::::field{name="cache" type="boolean"}
-      Par défaut à `false` - Active le cache pour mettre en cache les réponses de vos routes serveur ou fonctions avec `cachedEventHandler` et `cachedFunction` de Nitro.
+      Default to `false` - Enables cache storage to cache your server route responses or functions using Nitro's `cachedEventHandler` and `cachedFunction`
       :::::
     
       :::::field{name="database" type="boolean"}
-      Par défaut à `false` - Active la base de données SQL pour stocker les données de votre application.
+      Default to `false` - Enables SQL database to store your application's data.
       :::::
     ::::
   :::
@@ -294,19 +295,19 @@ Un `field` est une prop ou un paramètre à afficher dans votre contenu. Vous po
   ```mdc
   ::field-group
     ::field{name="analytics" type="boolean"}
-      Par défaut à `false` - Active l'analytics pour votre projet (bientôt disponible).
+      Default to `false` - Enables analytics for your project (coming soon).
     ::
   
     ::field{name="blob" type="boolean"}
-      Par défaut à `false` - Active le stockage blob pour stocker des assets statiques, comme des images, vidéos et plus.
+      Default to `false` - Enables blob storage to store static assets, such as images, videos and more.
     ::
   
     ::field{name="cache" type="boolean"}
-      Par défaut à `false` - Active le cache pour mettre en cache les réponses de vos routes serveur ou fonctions avec `cachedEventHandler` et `cachedFunction` de Nitro.
+      Default to `false` - Enables cache storage to cache your server route responses or functions using Nitro's `cachedEventHandler` and `cachedFunction`
     ::
   
     ::field{name="database" type="boolean"}
-      Par défaut à `false` - Active la base de données SQL pour stocker les données de votre application.
+      Default to `false` - Enables SQL database to store your application's data.
     ::
   ::
   ```
@@ -315,7 +316,7 @@ Un `field` est une prop ou un paramètre à afficher dans votre contenu. Vous po
 
 ### `Icon`
 
-Utilisez le composant `icon` pour afficher une [Icône](https://ui.nuxt.com/components/icon) dans votre contenu.
+Use the `icon` component to display an [Icon](https://ui.nuxt.com/components/icon) in your content.
 
 ::code-preview
 :icon{name="i-simple-icons-nuxtdotjs"}
@@ -330,7 +331,7 @@ Utilisez le composant `icon` pour afficher une [Icône](https://ui.nuxt.com/comp
 
 ### `Kbd`
 
-Utilisez le composant `kbd` pour afficher un [Kbd](https://ui.nuxt.com/components/kbd) dans votre contenu.
+Use the `kbd` component to display a [Kbd](https://ui.nuxt.com/components/kbd) in your content.
 
 ::code-preview
 #code
@@ -341,7 +342,7 @@ Utilisez le composant `kbd` pour afficher un [Kbd](https://ui.nuxt.com/component
 
 ### `Tabs`
 
-Utilisez les composants `tabs` et `tabs-item` pour afficher des [Onglets](https://ui.nuxt.com/components/tabs) dans votre contenu.
+Use the `tabs` and `tabs-item` components to display [Tabs](https://ui.nuxt.com/components/tabs) in your content.
 
 ::code-preview
   :::tabs{.w-full}
@@ -353,7 +354,7 @@ Utilisez les composants `tabs` et `tabs-item` pour afficher des [Onglets](https:
     ```
     ::::
   
-    ::::tabs-item{icon="i-lucide-eye" label="Aperçu"}
+    ::::tabs-item{icon="i-lucide-eye" label="Preview"}
       :::::callout
       Lorem velit voluptate ex reprehenderit ullamco et culpa.
       :::::
@@ -371,7 +372,7 @@ Utilisez les composants `tabs` et `tabs-item` pour afficher des [Onglets](https:
     ```
   ::::
 
-  :::tabs-item{icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{icon="i-lucide-eye" label="Preview"}
     :::::callout
     Lorem velit voluptate ex reprehenderit ullamco et culpa.
     :::::
@@ -382,20 +383,20 @@ Utilisez les composants `tabs` et `tabs-item` pour afficher des [Onglets](https:
 
 ### `Steps`
 
-Enveloppez vos titres avec le composant Steps pour afficher une liste d'étapes.
+Wrap your headings with the Steps component to display a list of steps.
 
-Utilisez la prop `level` pour définir quel titre sera utilisé pour les étapes.
+Use the `level` prop to define which heading will be used for the steps.
 
 ::tabs
-  :::tabs-item{.my-5 icon="i-lucide-eye" label="Aperçu"}
+  :::tabs-item{.my-5 icon="i-lucide-eye" label="Preview"}
     ::::steps{level="4"}
-    #### Démarrer un nouveau projet
+    #### Start a fresh new project
     
     ```bash [Terminal]
     npx nuxi init -t github:nuxt-content/docus
     ```
     
-    #### Lancer le CLI docus pour démarrer votre serveur de dev
+    #### Run docus CLI to run your dev server
     
     ```bash [Terminal]
     docus dev
@@ -406,13 +407,13 @@ Utilisez la prop `level` pour définir quel titre sera utilisé pour les étapes
   :::tabs-item{icon="i-lucide-code" label="Code"}
   ````mdc
   ::steps{level="4"}
-    #### Démarrer un nouveau projet
+    #### Start a fresh new project
     
     ```bash [Terminal]
     npx nuxi init -t github:nuxt-content/docus
     ```
     
-    #### Lancer le CLI docus pour démarrer votre serveur de dev
+    #### Run docus CLI to run your dev server
     
     ```bash [Terminal]
     docus dev
