--- a/content/vi/1.getting-started/2.introduction.md
+++ b/content/vi/1.getting-started/2.introduction.md
@@ -1,21 +1,21 @@
 ---
 title: Introduction
-description: Bienvenue dans la documentation du thème Docus.
+description: Welcome to Docus theme documentation.
 navigation:
   icon: i-lucide-house
 seo:
   title: Introduction
-  description: Découvrez comment créer, gérer et publier une documentation
-    facilement avec Docus.
+  description: Discover how to create, manage, and publish documentation
+    effortlessly with Docus.
 ---
 
-Bienvenue sur **Docus**, une solution de documentation entièrement intégrée construite avec [Nuxt UI](https://ui.nuxt.com).
+Welcome to **Docus**, a fully integrated documentation solution built with [Nuxt UI](https://ui.nuxt.com).
 
-## Qu'est-ce que Docus ?
+## What is Docus?
 
-Docus est un thème inspiré du [template de documentation Nuxt UI](https://docs-template.nuxt.dev/). Le style visuel est prêt à l'emploi, votre priorité doit être d'écrire du contenu en utilisant la syntaxe Markdown et [MDC](https://content.nuxt.com/docs/files/markdown#mdc-syntax) fournie par [Nuxt Content](https://content.nuxt.com).
+Docus is a theme based on the [UI documentation template](https://docs-template.nuxt.dev/). While the visual style comes ready out of the box, your focus should be on writing content using the Markdown and [MDC syntax](https://content.nuxt.com/docs/files/markdown#mdc-syntax) provided by [Nuxt Content](https://content.nuxt.com).
 
-Nous utilisons ce thème pour toutes nos documentations de modules Nuxt, y compris :
+We use this theme across all our Nuxt module documentations, including:
 
 ::card-group
   :::card
@@ -25,7 +25,7 @@ Nous utilisons ce thème pour toutes nos documentations de modules Nuxt, y compr
   title: Nuxt Image
   to: https://image.nuxt.com
   ---
-  La documentation de `@nuxt/image`
+  The documentation of `@nuxt/image`
   :::
 
   :::card
@@ -35,20 +35,20 @@ Nous utilisons ce thème pour toutes nos documentations de modules Nuxt, y compr
   title: Nuxt Supabase
   to: https://supabase.nuxtjs.org
   ---
-  La documentation de `@nuxt/supabase`
+  The documentation of `@nuxt/supabase`
   :::
 ::
 
-## Fonctionnalités clés
+## Key Features
 
-Ce thème inclut de nombreuses fonctionnalités pour améliorer la gestion de votre documentation :
+This theme includes a range of features designed to improve documentation management:
 
-- **Propulsé par** [**Nuxt 4**](https://nuxt.com) : Utilise le dernier framework Nuxt pour des performances optimales.
-- **Construit avec** [**Nuxt UI**](https://ui.nuxt.com): Intègre une suite complète de composants UI.
-- [**Syntaxe MDC**](https://content.nuxt.com/usage/markdown) **via** [**Nuxt Content**](https://content.nuxt.com) : Prend en charge le Markdown avec intégration de composants pour du contenu dynamique.
-- [**Nuxt Studio**](https://content.nuxt.com/docs/studio) **Compatible** : Rédigez et éditez votre contenu visuellement. Aucune connaissance Markdown requise !
-- **Navigation latérale auto-générée** : Génère automatiquement la navigation à partir de la structure du contenu.
-- **Recherche plein texte** : Fonctionnalité de recherche intégrée pour découvrir le contenu.
-- **Typographie optimisée** : Typographie raffinée pour une meilleure lisibilité.
-- **Mode sombre** : Prend en charge le mode sombre selon la préférence utilisateur.
-- **Fonctionnalités étendues** : Explorez le thème pour découvrir toutes ses capacités.
+- **Powered by** [**Nuxt 4**](https://nuxt.com): Utilizes the latest Nuxt framework for optimal performance.
+- **Built with** [**Nuxt UI**](https://ui.nuxt.com): Integrates a comprehensive suite of UI components.
+- [**MDC Syntax**](https://content.nuxt.com/usage/markdown) **via** [**Nuxt Content**](https://content.nuxt.com): Supports Markdown with component integration for dynamic content.
+- [**Nuxt Studio**](https://content.nuxt.com/docs/studio) **Compatible**: Write and edit your content visually. No Markdown knowledge is required!
+- **Auto-generated Sidebar Navigation**: Automatically generates navigation from content structure.
+- **Full-Text Search**: Includes built-in search functionality for content discovery.
+- **Optimized Typography**: Features refined typography for enhanced readability.
+- **Dark Mode**: Offers dark mode support for user preference.
+- **Extensive Functionality**: Explore the theme to fully appreciate its capabilities.
