--- a/content/vi/1.getting-started/4.project-structure.md
+++ b/content/vi/1.getting-started/4.project-structure.md
@@ -1,44 +1,45 @@
 ---
 navigation:
   icon: i-lucide-folder-tree
-title: Structure du projet
-description: Comprendre la structure de projet de Docus v4.
+title: Project Structure
+description: Learn about the project structure of Docus v4.
 ---
 
-## Structure globale
+## Global structure
 
-Docus v4 est un **layer Nuxt** qui étend votre application Nuxt standard avec des fonctionnalités de documentation. Cela vous donne la flexibilité d'un projet Nuxt classique.
+Docus v4 is a **Nuxt layer** that extends your standard Nuxt application with documentation features. This gives you the flexibility of a full Nuxt project.
 
-Lorsque vous créez un nouveau projet Docus avec `npx create-docus my-docs`, voici la structure de base:
-
-```
-my-docs/
-├── content/             # Votre contenu markdown
-│   ├── index.md         # Page d'accueil
-│   └── docs/            # Pages de documentation
-├── public/              # Ressources statiques
-└── package.json         # Dépendances et scripts
-```
-
-Vous pouvez toujours utiliser n'importe quelle fonctionnalité ou fichier d'un projet Nuxt classique :
+When you create a new Docus project with `npx create-docus my-docs`, you get:
 
 ```
 my-docs/
-├── app.config.ts        # Configuration de l'application
-├── nuxt.config.ts       # Configuration Nuxt (ajouter des modules, composants, etc.)
-├── app/                 # Répertoire app
-│   ├── components/      # Composants (ajoutez vos propres composants)
-│   ├── layouts/         # Layouts (ajoutez vos propres layouts)
-│   └── pages/           # Pages (ajoutez vos propres pages)
-└── server/              # Code côté serveur (ajoutez votre propre code côté serveur)
+├── content/             # Your markdown content
+│   ├── index.md         # Homepage
+│   └── docs/            # Documentation pages
+├── public/              # Static assets
+└── package.json         # Dependencies and scripts
+```
+
+You can still use any feature or file of a classical Nuxt project:
+
+```
+my-docs/
+├── app.config.ts        # App configuration
+├── nuxt.config.ts       # Nuxt configuration (add extra modules, components, etc.)
+├── app/                 # App directory
+│   ├── components/      # Components (add your own components)
+│   ├── layouts/         # Layouts (add your own layouts)
+│   └── pages/           # Pages (add your own pages)
+└── server/              # Server-side code (add your own server-side code)
 ```
 
 
-### Répertoire `content/`
 
-C'est ici que vous [rédigez vos pages](/fr/concepts/edition) en Markdown. Docus génère automatiquement les routes basées sur votre structure de fichiers.
+### `content/` directory
 
-**Structure monolingue :**
+This is where you [write pages](/en/concepts/edition) in Markdown. Docus automatically generates routes based on your file structure.
+
+**Single language structure:**
 ```
 content/
 ├── index.md
@@ -48,7 +49,7 @@ content/
     └── configuration.md
 ```
 
-**Structure multilingue (avec i18n) :**
+**Multi-language structure (with i18n):**
 ```
 content/
 ├── en/
@@ -62,16 +63,17 @@ content/
 ```
 
 ::prose-tip
-Plus d'informations sur i18n sont disponibles dans la section [Internationalisation](/fr/concepts/internationalization).
+More information about i18n is available in the [Internationalization](/en/concepts/internationalization) section.
 ::
 
-### Répertoire `public/`
+### `public/` directory
 
-Les fichiers contenus dans le répertoire `public/` sont servis à la racine et ne sont pas modifiés par le processus de build. C'est ici que vous pouvez placer vos images, icônes et autres ressources statiques.
+Files contained within the `public/` directory are served at the root and are not modified by the build process. This is where you can locate your images, icons, and other static assets.
 
 ### `package.json`
 
-Ce fichier contient toutes les dépendances et scripts de votre application. Le `package.json` d'une application Docus est vraiment minimal et ressemble à :
+This file contains all the dependencies and scripts for your application. The `package.json` of 
+a Docus application si really minimal and looks like:
 
 ```json [package.json]
 {
@@ -90,9 +92,9 @@ Ce fichier contient toutes les dépendances et scripts de votre application. Le 
 
 ### `nuxt.config.ts`
 
-*Ce fichier n'est pas obligatoire pour démarrer une application Docus.*
+*This file is not mandatory to start a Docus application.*
 
-Vous pouvez ajouter des modules supplémentaires à votre fichier de configuration Nuxt :
+You can add extra modules to your Nuxt configuration file:
 
 ```typescript [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -102,29 +104,29 @@ export default defineNuxtConfig({
 
 ### `app.config.ts`
 
-*Ce fichier n'est pas obligatoire pour démarrer une application Docus.*
+*This file is not mandatory to start a Docus application.*
 
-C'est ici que vous pouvez [configurer Docus](/fr/concepts/configuration) pour l'adapter à votre marque, gérer le SEO et adapter les liens et réseaux sociaux.
+This is where you can [configure Docus](/en/concepts/configuration) to fit your branding, handle SEO and adapt links and socials.
 
-## Structure complète d'un projet Nuxt
+## Full Nuxt Project Capabilities
 
-Puisque Docus v4 est un layer Nuxt, vous pouvez utiliser **n'importe quelle fonctionnalité** d'un projet Nuxt standard :
+Since Docus v4 is a Nuxt layer, you can use **any feature** of a standard Nuxt project:
 
 ```
 my-docs/
-├── app/                 # Répertoire app (optionnel)
-│   ├── components/      # Composants Vue personnalisés
-│   ├── layouts/         # Layouts personnalisés
-│   ├── pages/           # Pages Vue personnalisées (en dehors du contenu)
-│   ├── composables/     # Composables Vue
-│   └── middleware/      # Middleware de route
-├── server/              # Code côté serveur
-│   └── api/             # Routes API
-├── plugins/             # Plugins Nuxt
-├── middleware/          # Middleware global
-└── modules/             # Modules Nuxt personnalisés
+├── app/                 # App directory (optional)
+│   ├── components/      # Custom Vue components
+│   ├── layouts/         # Custom layouts
+│   ├── pages/           # Custom Vue pages (outside of content)
+│   ├── composables/     # Vue composables
+│   └── middleware/      # Route middleware
+├── server/              # Server-side code
+│   └── api/             # API routes
+├── plugins/             # Nuxt plugins
+├── middleware/          # Global middleware
+└── modules/             # Custom Nuxt modules
 ```
 
-::prose-tip{to="/fr/concepts/nuxt"}
-Cette approche basée sur les layers offre toutes les fonctionnalités d'un projet Nuxt classique.
+::prose-tip{to="/en/concepts/nuxt"}
+This layer-based approach gives you the power of the entire Nuxt ecosystem while keeping documentation as the primary focus.
 ::
