--- a/content/vi/1.getting-started/5.studio.md
+++ b/content/vi/1.getting-started/5.studio.md
@@ -1,129 +1,129 @@
 ---
-title: Éditeur Web
-description: Construisez votre documentation avec l'éditeur web Nuxt Studio
+title: Web Editor
+description: Build your documentation using Nuxt Studio web editor
 navigation:
   icon: i-lucide-mouse-pointer-2
 ---
 
 ## **Introduction**
 
-L'**éditeur web** [Nuxt Studio](https://nuxt.studio) est une interface visuelle dans le navigateur pour créer, éditer et relire votre documentation. Il offre une expérience de prévisualisation tout en gardant votre travail synchronisé avec votre dépôt Git.
+The [Nuxt Studio](https://nuxt.studio) **web editor** is a browser-based visual interface for creating, editing, and reviewing your documentation. It provides a preview experience while keeping your work in sync with your Git repository.
 
 :video{controls loop src="https://res.cloudinary.com/nuxt/video/upload/v1747230893/studio/wzt9zfmdvk7hgmdx3cnt.mp4"}
 
 ::prose-tip{to="https://content.nuxt.com/studio"}
-En savoir plus sur Nuxt Studio dans la documentation Nuxt Content.
+Learn more about Nuxt Studio in the Nuxt Content documentation.
 ::
 
-## **Éditeur Web vs. CLI**
+## **Web Editor vs. CLI**
 
-L'**éditeur web** de [Nuxt Studio](https://nuxt.studio) vous permet de gérer toute votre documentation depuis votre navigateur. Aucun outil de développement local ou commande terminal n'est nécessaire. C'est idéal pour maintenir votre documentation à un seul endroit, avec un outil simple sans aucune compétence Markdown requise.
+The **web editor** of [Nuxt Studio](https://nuxt.studio) allows you to manage your documentation entirely from your browser. There is no need for local development tools or terminal commands. It’s ideal for maintaining your docs in one centralised place, with an easy tool without any Markdown skills required.
 
-Le **CLI (Command Line Interface)**, quant à lui, est un outil local destiné aux développeurs qui préfèrent travailler dans leur propre IDE.
+The **CLI (Command Line Interface)**, on the other hand, is a local tool designed for developers who prefer working in their own IDE.
 
 ::prose-note
-Les deux outils sont entièrement intégrés à Git, vous pouvez donc passer de l'un à l'autre selon vos besoins. Les membres de l'équipe peuvent choisir la méthode qui convient le mieux à leur flux de travail.
+Both tools are fully integrated with Git, so you can switch between them as needed. Team members can choose whichever method suits their workflow best.
 ::
 
-## **Deux éditeurs distincts**
+## **Two distinct editors**
 
-Nuxt Studio offre un espace de travail polyvalent pour les développeurs et les rédacteurs de contenu, leur permettant de choisir entre deux éditeurs distincts pour la création et la gestion du contenu : l'**éditeur Markdown** et l'**éditeur visuel**.
+Nuxt Studio offers a versatile workspace for both developers and content writers, giving them the freedom to choose between two distinct editors for content creation and management: the **Markdown editor** and the **Visual editor**.
 
-Vous pouvez sélectionner votre éditeur préféré depuis la page des paramètres de votre projet.
+You can select your favorite editor from the settings page of your project.
 
 ::prose-note
-Chaque éditeur a son utilité, certains utilisateurs sont habitués à l'édition Markdown, tandis que d'autres préfèrent une approche visuelle et non technique. Au final, **la syntaxe Markdown est le résultat final** pour les deux éditeurs.
+Each editor serves its own purpose, some users are used to Markdown edition, while others prefer a non-technical, visual approach. At the end, **Markdown syntax is the final output** for both editors.
 ::
 
-## **Éditeur Markdown**
+## **Markdown editor**
 
-![Éditeur Markdown pour développeurs](/documentation/markdown-editor-studio.png)
+![Markdown editor for developers](/documentation/markdown-editor-studio.png)
 
-L'éditeur Markdown de Nuxt Studio offre un contrôle total sur votre contenu, vous permettant de rédiger directement votre documentation en **Markdown** et d'intégrer des composants Vue avec la [syntaxe MDC](https://content.nuxt.com/docs/files/markdown#mdc-syntax).
+The Markdown editor in Nuxt Studio provides full control over your content, allowing you to write directly you documentation in **Markdown** and integrate Vue components with the [MDC syntax](https://content.nuxt.com/docs/files/markdown#mdc-syntax).
 
-Lorsque votre fichier est sauvegardé avec l'éditeur Markdown, le contenu est stocké exactement comme vous l'avez écrit, en préservant toute la syntaxe et la mise en forme spécifique. Cet éditeur est idéal pour les utilisateurs à l'aise avec Markdown qui souhaitent un contrôle précis sur la mise en page et la structure de leur contenu.
+When your file is saved with the Markdown editor, the content is stored exactly as you've written it, preserving all specific syntax and formatting. This editor is ideal for users comfortable with Markdown who want precise control over the layout and structure of their content.
 
-## **Éditeur visuel**
+## **Visual editor**
 
-![Éditeur visuel pour utilisateurs non techniques](/documentation/visual-editor-studio.png)
+![Visual editor for non technical users](/documentation/visual-editor-studio.png)
 
-L'éditeur Nuxt Studio s'inspire fortement de Notion, reconnu pour son design intuitif et sa flexibilité. Comme un éditeur de texte standard, l'éditeur Studio est conçu pour être familier et facile à utiliser.
+The Nuxt Studio editor is heavily inspired by Notion, well known for its intuitive design and flexibility. Much like a standard text editor, the Studio editor is designed to be familiar and easy to use.
 
-Cependant, il se distingue par ses fonctionnalités supplémentaires qui améliorent l'expérience d'écriture :
+However, it stands out with its additional features that improve the writing experience:
 
-### **Barre d'outils**
+### **Toolbar**
 
-Sélectionnez votre texte pour faire apparaître la barre d'outils, donnant accès à toutes les fonctionnalités d'édition de texte standard fournies par la [syntaxe Markdown](/fr/essentials/markdown-syntax) :
+Highlight your text to reveal the toolbar, giving you access to all the standard text editing features provided by the [Markdown syntax](/en/essentials/markdown-syntax):
 
-- Mise en forme des titres
-- Gras
-- Italique
-- Barré
+- Title formatting
+- Bold
+- Italic
+- Strike-through
 - Code
-- Lien
-- Classe
-- Liste à puces
-- Liste numérotée
+- Link
+- Class
+- Bullet list
+- Numerated list
 
-### **Le raccourci** `/`
+### **The** `/` **shortcut**
 
-Tapez simplement `/` n'importe où dans l'éditeur pour accéder à toutes les fonctionnalités de Studio.
+Simply type `/` anywhere in the editor to access all Studio features.
 
-#### **Fonctionnalités de mise en forme**
+#### **Formatting features**
 
-- Mise en forme des titres
-- Saut de ligne
-- Règle horizontale
-- Bloc de code
-- Paragraphe
-- Gras & italique
+- Title formatting
+- Line break
+- Horizontal rule
+- Code-block
+- Paragraph
+- Bold & italic
 
-#### **Composants**
+#### **Components**
 
-L'une des fonctionnalités phares de Studio est sa capacité à intégrer et personnaliser n'importe quel composant complexe directement dans l'éditeur.
+One of Studio's standout features is its ability to integrate and customize any complex component directly within the editor.
 
-En d'autres termes, tous les [composants Nuxt UI](/fr/essentials/components) sont utilisables et peuvent être intégrés directement depuis l'éditeur. Un éditeur peut également ajuster les propriétés, slots et styles du composant.
+In other terms, all [Nuxt UI components](/en/essentials/components) are usable and can be integrated directly from the editor. An editor can also tweak the component properties, slots and styles.
 
 ::prose-note
-Vous pouvez aussi créer des composants personnalisés et laisser l'utilisateur les intégrer depuis l'éditeur visuel.
+You can also create custom components and let the user integrate them from the visual editor.
 ::
 
-Tapez simplement `/` pour accéder à la liste de tous les composants disponibles.
+Just type `/` to access the list of all the components available.
 
 #### **Images**
 
-Avec le raccourci `/`, vous pouvez rapidement insérer une image en sélectionnant l'option `Image`. Une modale s'ouvrira pour choisir le média à insérer.
+Using the `/`shortcut, you can quickly insert an image by selecting the `Image` option. A modal will open to let you choose the media you want to insert.
 
-Depuis la modale média, vous pouvez définir l'**attribut alt** pour le SEO et l'accessibilité.
+From the media modal, you can set the **alt attribute** for SEO and accessibility purpose.
 
-#### **Vidéos**
+#### **Videos**
 
-Avec le raccourci `/`, vous pouvez rapidement insérer une vidéo en sélectionnant le choix `Vidéo` et en renseignant l'URL de la vidéo.
+Using the `/` shortcut, you can quickly insert a video by selecting the `Video` choice and filling up the Video URL.
 
-Dès qu'une vidéo est ajoutée, un onglet s'ouvre automatiquement avec tous les champs de propriétés **disponibles par défaut**, pour renseigner l'URL et personnaliser votre média.
+As soon as a video is added, a tab will automatically open with all the props field **available by default**, for you to fill out the URL and customize your media.
 
-## **Aperçu en direct**
+## **Live Preview**
 
 ![preview.png](/documentation/preview-studio.png)
 
-Une fois votre documentation déployée, elle propose une fonctionnalité d'aperçu en direct qui vous permet de voir instantanément les mises à jour de votre projet.
+Once your documentation is deployed, it provides a live preview feature that lets you instantly see updates to your project.
 
-Nous utilisons votre site de production pour surcharger les contenus et afficher le nouveau visuel. C'est pourquoi l'URL doit être définie dans la section **deploy**.
+We're using your production website to override contents and display the new visual. This is why we need the URL to be set in the **deploy** section.
 
-Lorsque vous éditez votre site avec Studio, l'aperçu en direct peut s'afficher à droite de votre écran. Vous obtenez un retour instantané lors de la saisie. L'aperçu se synchronise selon vos brouillons.
+When you are editing your website with Studio, the live preview can be displayed on the right part of your screen. You get an instant feedback when typing. It syncs the preview based on your draft updates.
 
-## **Effectuer des modifications**
+## **Making Changes**
 
-Pour éditer votre documentation :
+To edit your documentation:
 
-1. **Parcourez les fichiers** via l'explorateur de fichiers.
-2. **Ouvrez un fichier** en cliquant dessus.
-3. **Modifiez le contenu** en mode visuel ou Markdown. Toutes les modifications sont automatiquement enregistrées en tant que brouillons.
-4. **Prévisualisez vos modifications** pour voir leur rendu avant publication.
+1. **Browse files** using the file explorer.
+2. **Open a file** by clicking on it.
+3. **Edit content** in either visual or Markdown mode. All edits are automatically saved as drafts.
+4. **Preview your changes** to see how they’ll appear when published.
 
-## **Publier les modifications**
+## **Publishing Changes**
 
-Quand vous êtes prêt à publier :
+When you’re ready to publish:
 
-- Cliquez sur le bouton **Publier** en haut à droite de l'éditeur.
-- Vos modifications seront poussées directement sur la branche de déploiement et seront mises en ligne immédiatement.
+- Click the **Publish** button in the top-right corner of the editor.
+- Your changes will be pushed directly to your deployment branch and go live immediately.
