--- a/content/vi/1.getting-started/6.migration.md
+++ b/content/vi/1.getting-started/6.migration.md
@@ -1,17 +1,18 @@
 ---
 title: Migration
-description: "Comment migrer votre documentation d'une solution Markdown existante vers Docus"
+description: " How to migrate your documentation from an existing Markdown
+  solution to Docus"
 navigation:
   icon: i-lucide-replace
 ---
 
-## **Migration de Docus v3 vers v4**
+## **Migrating from Docus v3 to v4**
 
-Docus v4 introduit une nouvelle version qui exploite le CLI Nuxt au lieu du CLI Docus. Votre contenu et vos configurations existants restent compatibles, il suffit simplement de mettre à jour la commande pour lancer le serveur ou le build.
+Docus v4 introduces a new **layer-based approach** that leverages the official Nuxt CLI instead of the custom Docus CLI. While your existing content and configuration remain compatible, you'll need to update your commands and project setup.
 
-### ⚠️ Breaking changes
+### **⚠️ Breaking Changes**
 
-Les principaux changements cassants sont liés aux commandes CLI :
+The main breaking changes are related to CLI commands:
 
 | v3 | v4 |
 |--------------|----| 
@@ -20,22 +21,22 @@ Les principaux changements cassants sont liés aux commandes CLI :
 | `docus build` | `nuxt build --extend docus` |
 
 ::prose-tip
-Votre contenu Markdown existant fonctionnera sans changements. La migration concerne principalement la mise à jour de votre workflow de développement et de build.
+Your existing Markdown content and MDC syntax will work without changes. The migration primarily involves updating your development and build workflow.
 ::
 
-## **Migrer vers Docus**
+## **Migrating to Docus**
 
-Vous utilisez déjà une solution basée sur Markdown pour votre documentation ? Que ce soit **Docus v1**, le **template de docs Nuxt UI**, ou une autre solution de site statique, migrer vers Docus est simple et direct.
+Already using a Markdown-based solution for your documentation? Whether it’s **Docus v1**, the **Nuxt UI docs template**, or another static site setup, migrating to Docus is simple and straightforward.
 
-Docus offre une solution propre et maintenable avec une seule dépendance : la bibliothèque Docus elle-même. Plus besoin de gérer de multiples dépendances. Tout est intégré et maintenu ensemble, ce qui facilite la mise à jour de votre documentation.
+Docus offers a clean and maintainable solution with a single dependency: the Docus library itself. There’s no need to manage multiple dependencies. With everything built-in and maintained together, keeping your documentation up to date is easier than ever.
 
-Pour migrer, déplacez simplement vos fichiers Markdown existants dans le dossier `content/` du starter Docus.
+To migrate, just move your existing Markdown files into the `content/` directory of the Docus starter.
 
-À partir de là, deux scénarios :
+From there, you have two scenarios:
 
-- **Si votre documentation actuelle utilise déjà Nuxt Content et la syntaxe MDC**, assurez-vous que les composants utilisés existent dans Nuxt UI. Si certains composants manquent, vous pouvez facilement créer les vôtres.
-- **Si vous utilisez du Markdown standard**, vous pouvez copier vos fichiers tels quels. Ensuite, améliorez progressivement votre documentation en utilisant les [composants intégrés](/fr/essentials/components) fournis par Nuxt UI.
+- **If your current docs already use Nuxt Content and the MDC syntax**, make sure the components used in your content exist in Nuxt UI. If any components are missing, you can easily create your own custom ones.
+- **If you’re using standard Markdown**, you can copy your files as is. Then, enhance your documentation progressively using the [built-in components](/en/essentials/components) provided by Nuxt UI.
 
-Une fois votre contenu déplacé dans le dossier `content/`, vous pouvez consulter la [section configuration](/fr/concepts/configuration) pour personnaliser facilement votre application.
+Once your content has been moved to the `content/` folder, you can go through the [configuration section](/en/concepts/configuration) to easily customize your app.
 
-Docus est conçu pour se concentrer sur la rédaction de contenu, donc si vous utilisez déjà Markdown, vous pouvez facilement passer à Docus.
+Docus is designed to focus on writing content, so if you're already using Markdown, you can easily switch to it.
