--- a/content/vi/2.essentials/1.markdown-syntax.md
+++ b/content/vi/2.essentials/1.markdown-syntax.md
@@ -1,68 +1,68 @@
 ---
-title: Syntaxe Markdown
-description: Texte, titres et mise en forme en markdown standard.
+title: Markdown Syntax
+description: Text, title, and styling in standard markdown.
 navigation:
   icon: i-lucide-heading-1
 ---
 
-## Titres
+## Titles
 
-Utilisez des titres pour introduire les sections principales. Ils structurent votre documentation et aident les utilisateurs à naviguer dans le contenu.
+Use titles to introduce main sections. They structure your documentation and help users navigate content.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0"
 ---
-## Titres
+## Titles
 
 #code
 ```mdc
-## Titres
+## Titles
 ```
 ::
 
-### Sous-titres
+### Subtitles
 
-Utilisez des sous-titres pour diviser davantage les sections. Ils créent une hiérarchie de contenu plus détaillée pour une meilleure lisibilité.
+Use subtitles to divide sections further. They create a more detailed content hierarchy for better readability.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0"
 ---
-### Sous-titres
+### Subtitles
 
 #code
 ```mdc
-### Sous-titres
+### Subtitles
 ```
 ::
 
 ::tip
-Chaque titre et sous-titre crée une ancre et apparaît automatiquement dans la table des matières.
+Each title and subtitle creates an anchor and shows up automatically in the table of contents.
 ::
 
-## Mise en forme du texte
+## Text Formatting
 
-Docus prend en charge la plupart des options de mise en forme Markdown.
+Docus supports most Markdown formatting options.
 
-| Style  | Syntaxe         | Résultat         |
-| ------ | --------------- | --------------- |
-| Gras   | `**gras**`      | **Gras**        |
-| Italique | `*italique*`   | *Italique*      |
-| Barré  | `~~barré~~`     | ~~Barré~~       |
+| Style  | How to use   | Result     |
+| ------ | ------------ | ---------- |
+| Bold   | `**bold**`   | **Bold**   |
+| Italic | `*italic*`   | *Italic*   |
+| Strike | `~~strike~~` | ~~Strike~~ |
 
-Combinez les styles pour enrichir le texte et mettre en valeur des éléments.
+Combine formatting for richer text styles and visual emphasis.
 
-| Style           | Syntaxe                  | Résultat                |
-| --------------- | ----------------------- | ----------------------- |
-| Gras Italique   | `**_gras italique_**`   | ***Gras Italique***     |
-| Gras Barré      | `~~**gras**~~`          | ~~**Gras**~~            |
-| Italique Barré  | `~~*italique*~~`        | ~~*Italique*~~          |
+| Style         | How to use          | Result            |
+| ------------- | ------------------- | ----------------- |
+| Bold Italic   | `**_bold italic_**` | ***Bold Italic*** |
+| Bold Strike   | `~~**bold**~~`      | ~~**Bold**~~      |
+| Italic Strike | `~~*italic*~~`      | ~~*Italic*~~      |
 
-## Liens
+## Links
 
-Les liens relient différentes parties de votre documentation et des ressources externes, essentiels pour la navigation et les références.
-Pour créer un lien, entourez le texte du lien avec des crochets `[]()`.
+Links connect different parts of your documentation and external resources, essential for user navigation and providing references.
+To create a link, wrap the link text in brackets `[]()`.
 
 ::code-preview
 ---
@@ -76,97 +76,97 @@ class: "[&>div]:*:my-0"
 ```
 ::
 
-### Liens internes
+### Internal links
 
-Pour lier des pages de votre documentation, utilisez des chemins relatifs à la racine comme `/getting-started/installation`.
-
-::code-preview
----
-class: "[&>div]:*:my-0"
----
-[Installation](/fr/getting-started/installation)
-
-#code
-```mdc
-[Installation](/fr/getting-started/installation)
-```
-::
-
-## Listes
-
-Organisez des éléments liés dans un format structuré et lisible. Markdown prend en charge les listes non ordonnées, ordonnées et imbriquées pour divers besoins.
-
-### Non ordonnée
-
-Utilisez des listes non ordonnées pour des éléments sans ordre particulier. Commencez chaque élément par un symbole `-`.
+For linking within your documentation, use root-relative paths like `/getting-started/installation`.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0"
 ---
-- Je suis un élément de liste.
-- Je suis un autre élément de liste.
-- Je suis le dernier élément de liste.
+[Installation](/getting-started/installation)
 
 #code
 ```mdc
-- Je suis un élément de liste.
-- Je suis un autre élément de liste.
-- Je suis le dernier élément de liste.
+[Installation](/getting-started/installation)
 ```
 ::
 
-### Ordonnée
+## Lists
 
-Utilisez des listes ordonnées lorsque l'ordre des éléments est important, comme des étapes d'un processus. Commencez chaque élément par un numéro.
+Organize related items in a structured, readable format. Markdown supports unordered, ordered, and nested lists for various content needs.
+
+### Unordered
+
+Use unordered lists for items without a specific sequence. Start each item with a `-` symbol.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0"
 ---
-1. Je suis un élément de liste.
-2. Je suis un autre élément de liste.
-3. Je suis le dernier élément de liste.
+- I'm a list item.
+- I'm another list item.
+- I'm the last list item.
 
 #code
 ```mdc
-1. Je suis un élément de liste.
-2. Je suis un autre élément de liste.
-3. Je suis le dernier élément de liste.
+- I'm a list item.
+- I'm another list item.
+- I'm the last list item.
 ```
 ::
 
-### Imbriquée
+### Ordered
 
-Créez des listes hiérarchiques avec des sous-éléments pour des structures complexes. Indentez les sous-éléments de quatre espaces pour l'imbrication.
+Use ordered lists when item order matters, like steps in a process. Start each item with a number.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0"
 ---
-- Je suis un élément de liste.
-  - Je suis un élément de liste imbriqué.
-  - Je suis un autre élément de liste imbriqué.
-- Je suis un autre élément de liste.
+1. I'm a list item.
+2. I'm another list item.
+3. I'm the last list item.
 
 #code
 ```mdc
-- Je suis un élément de liste.
-  - Je suis un élément de liste imbriqué.
-  - Je suis un autre élément de liste imbriqué.
-- Je suis un autre élément de liste.
+1. I'm a list item.
+2. I'm another list item.
+3. I'm the last list item.
 ```
 ::
 
-## Tableaux
+### Nested
 
-Présentez des données structurées en lignes et colonnes. Les tableaux sont idéaux pour comparer des données ou lister des propriétés.
+Create hierarchical lists with sub-items for complex structures. Indent sub-items by four spaces for nesting.
+
+::code-preview
+---
+class: "[&>div]:*:my-0"
+---
+- I'm a list item.
+  - I'm a nested list item.
+  - I'm another nested list item.
+- I'm another list item.
+
+#code
+```mdc
+- I'm a list item.
+  - I'm a nested list item.
+  - I'm another nested list item.
+- I'm another list item.
+```
+::
+
+## Tables
+
+Present structured data in rows and columns clearly. Tables are ideal for comparing data or listing properties.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0 [&>div]:*:w-full"
 ---
-| Prop    | Défaut    | Type     |
+| Prop    | Default   | Type     |
 | ------- | --------- | -------- |
 | `name`  |           | `string` |
 | `size`  | `md`      | `string` |
@@ -174,7 +174,7 @@ class: "[&>div]:*:my-0 [&>div]:*:w-full"
 
 #code
 ```mdc
-| Prop    | Défaut    | Type                     |
+| Prop    | Default   | Type                     |
 |---------|-----------|--------------------------|
 | `name`  |           | `string`{lang="ts-type"} |
 | `size`  | `md`      | `string`{lang="ts-type"} |
@@ -182,42 +182,42 @@ class: "[&>div]:*:my-0 [&>div]:*:w-full"
 ```
 ::
 
-## Citations
+## Blockquotes
 
-Mettez en avant des citations, références ou textes importants. Les citations distinguent visuellement le contenu cité.
+Highlight important quotations, citations, or emphasized text. Blockquotes visually distinguish quoted content.
 
-### Une ligne
+### Singleline
 
-Les citations sur une seule ligne sont idéales pour des citations courtes et percutantes. Ajoutez un `>` devant un paragraphe. Idéal pour les citations courtes.
+Single-line blockquotes are best for short, impactful quotes or citations that fit within a single line. To create a single-line blockquote, add a `>` in front of a paragraph. Ideal for short and impactful quotes.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0"
 ---
-> Nuxt est une collection de composants Vue, de composables et d'utilitaires construits sur Nuxt UI, orientés structure et layout, conçus comme des blocs de construction pour votre application.
+> Nuxt UI is a collection of Vue components, composables and utils built on top of Reka UI, oriented on structure and layout and designed to be used as building blocks for your app.
 
 #code
 ```mdc
-> Nuxt est une collection de composants Vue, de composables et d'utilitaires construits sur Nuxt UI, orientés structure et layout, conçus comme des blocs de construction pour votre application.
+> Nuxt UI is a collection of Vue components, composables and utils built on top of Reka UI, oriented on structure and layout and designed to be used as building blocks for your app.
 ```
 ::
 
-### Multiligne
+### Multiline
 
-Les citations multiligne conviennent aux citations plus longues ou pour inclure plusieurs paragraphes dans une seule citation.
+Multi-line blockquotes are suitable for longer quotes or when you need to include multiple paragraphs within a single quotation.
 
 ::code-preview
 ---
 class: "[&>div]:*:my-0"
 ---
-> Nuxt est une collection de composants Vue, de composables et d'utilitaires construits sur Nuxt UI, orientés structure et layout, conçus comme des blocs de construction pour votre application.
+> Nuxt UI is a collection of Vue components, composables and utils built on top of Reka UI, oriented on structure and layout and designed to be used as building blocks for your app.
 >
-> Créez de belles applications Vue réactives et accessibles avec Nuxt.
+> Create beautiful, responsive, and accessible Vue applications with Nuxt UI.
 
 #code
 ```mdc
-> Nuxt est une collection de composants Vue, de composables et d'utilitaires construits sur Nuxt UI, orientés structure et layout, conçus comme des blocs de construction pour votre application.
+> Nuxt UI is a collection of Vue components, composables and utils built on top of Reka UI, oriented on structure and layout and designed to be used as building blocks for your app.
 >
-> Créez de belles applications Vue réactives et accessibles avec Nuxt.
+> Create beautiful, responsive, and accessible Vue applications with Nuxt UI.
 ```
 ::
