--- a/content/vi/2.essentials/4.images-embeds.md
+++ b/content/vi/2.essentials/4.images-embeds.md
@@ -1,43 +1,43 @@
 ---
-title: Images et intégrations
-description: Ajoutez des images, vidéos et autres éléments HTML
+title: Images and Embeds
+description: Add image, video, and other HTML elements
 navigation:
   icon: i-lucide-image
 seo:
-  description: Ajoutez des images, vidéos et autres éléments HTML avec le thème Docus
+  description: Add image, video, and other HTML elements using Docus theme
 ---
 
 ## Markdown
 
-Affichez des images ou des vidéos en utilisant la syntaxe Markdown standard.
+Display images or videos using standard Markdown syntax.
 
 ### Images
 
 ::code-preview
-![Image Nuxt Social](https://nuxt.com/new-social.jpg)
+![Nuxt Social Image](https://nuxt.com/new-social.jpg)
 
 #code
 ```mdc
-![Image Nuxt Social](https://nuxt.com/new-social.jpg)
+![Nuxt Social Image](https://nuxt.com/new-social.jpg)
 ```
 ::
 
-Ou avec vos images locales
+Or with your local images
 
 ::code-preview
-![Montagnes enneigées dans une mer de nuages au coucher du soleil](/mountains.webp)
+![Snow-capped mountains in a sea of clouds at sunset](/mountains.webp)
 
 #code
 ```mdc
-![Montagnes enneigées dans une mer de nuages au coucher du soleil](/mountains.webp)
+![Snow-capped mountains in a sea of clouds at sunset](/mountains.webp)
 ```
 ::
 
 ::note{to="https://image.nuxt.com/"}
-Docus utilisera le composant `<NuxtImg>` sous le capot à la place de la balise native `img`.
+Docus will use `<NuxtImg>` component under the hood instead of the native `img` tag.
 ::
 
-### Vidéos
+### Videos
 
 ::prose-code-preview
 :video{autoplay controls loop src="https://res.cloudinary.com/dcrl8q2g3/video/upload/v1745404403/landing_od8epr.mp4"}
